@@ -5,13 +5,13 @@ INSTALL
 Makefile.in
 config.h.in
 configure
-build-aux/config.guess
-build-aux/config.sub
-build-aux/depcomp
-build-aux/install-sh
-build-aux/mdate-sh
-build-aux/missing
-build-aux/texinfo.tex
+m4/config.guess
+m4/config.sub
+m4/depcomp
+m4/install-sh
+m4/mdate-sh
+m4/missing
+m4/texinfo.tex
 doc/Makefile.in
 lightning/Makefile.in
 tests/Makefile.in
