@@ -1,10 +1,10 @@
 # Automake requirements:
 AUTOMAKE_OPTIONS = 1.8 gnu
-ACLOCAL_AMFLAGS = -I build-aux
+ACLOCAL_AMFLAGS = -I m4
 
 SUBDIRS = . doc lightning tests
 
 include_HEADERS = lightning.h
 
 aclocaldir = $(datadir)/aclocal
-dist_aclocal_DATA = build-aux/lightning.m4
+dist_aclocal_DATA = m4/lightning.m4
