@@ -9,8 +9,8 @@ dnl ----------------------------- HOST SYSTEM ----------------------------------
 
 AC_PREREQ(2.54)
 AC_INIT([GNU lightning], 1.2c, bonzini@gnu.org, lightning)
-AC_CONFIG_AUX_DIR(build-aux)
-AC_CONFIG_MACRO_DIR(build-aux)
+AC_CONFIG_AUX_DIR(m4)
+AC_CONFIG_MACRO_DIR(m4)
 AC_CONFIG_SRCDIR([lightning.h])
 
 AC_CANONICAL_TARGET
