@@ -1,5 +1,5 @@
-TEXI2DVI=$(top_srcdir)/build-aux/texi2dvi
-HELP2MAN = $(top_srcdir)/build-aux/help2man
+TEXI2DVI=$(top_srcdir)/m4/texi2dvi
+HELP2MAN = $(top_srcdir)/m4/help2man
 
 info_TEXINFOS = lightning.texi 
 EXTRA_TEXINFOS = u-lightning.texi p-lightning.texi
